Fix nav drawer, footer, shop z-index mobile bug

--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,6 +1,7 @@
 @import "../styles/colors";
 
 .mdl-mega-footer.footer{
+    z-index: 101;
     position: relative;
     // background-color: $fadedBlack;
     // background-color: $darkerBeige;
