--- a/src/components/landing.scss
+++ b/src/components/landing.scss
@@ -532,6 +532,7 @@
             height: 64vh;
         }
         #shop-section{
+            z-index: 101;
             top: 0;
             margin-top: 0;
             padding-top: 0;
